--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body{
     width: 100%;
     displaY: flex;
     align-items: center;
-    background-image: linear-gradient(rgba(4,9,30,0.3),rgba(4,9,30,0.3)),url("https://streetviewpixels-pa.googleapis.com/v1/thumbnail?panoid=Xj7XIvAr7do29zg2iTL_YQ&cb_client=search.gws-prod.gps&w=408&h=240&yaw=189.76756&pitch=0&thumbfov=100");
+    background-image: url("https://cdn.discordapp.com/attachments/731318867858554910/986336268847816784/unknown.png");
     background-position: center;
     background-size: cover;
     position: relative;
@@ -326,7 +326,11 @@ box-shadow: 0px 2px 5px 0px rgba(145, 108, 235,0.75);
     font-weight:600
   }
 }
-
+.border-visuals0 {
+  background: #c4cfcf;
+  height: 6vh;
+  width: 100%;
+}
 .border-visuals1 {
     background: #f9f9f9;
     height: 5vh;
